@@ -1,3 +1,8 @@
+Wed Oct 16 23:09 2013 CDT
+    * www/assets/js/util.js: Add a special handler so that clicking
+      anywhere on the page clears a userlist dropdown, not just right
+      clicking the same name.
+
 Wed Oct 16 21:48 2013 CDT
     * www/assets/js/player.js: Add a stupid timeout hack to address
       a race condition in YouTube's HTML5 player.  Seriously?
